tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/bad-uni-esc-1.stderr
TOML parse error at line 1, column 13
  |
1 | str = "val\ue"
  |             ^
invalid unicode 4-digit hex code
